snapshots/syntax/library/functions/conversion/hex/hex_negative_value.snap
---
source: vb6parse/src/syntax/library/functions/conversion/hex.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: DimStatement
              children:
                - kind: DimKeyword
                  text: Dim
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: negHex
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: StringKeyword
                  text: String
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: negHex
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Hex
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: UnaryExpression
                              children:
                                - kind: SubtractionOperator
                                  text: "-"
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "1"
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: Debug
                - kind: PeriodOperator
                  text: "."
                - kind: PrintKeyword
                  text: Print
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: negHex
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
